@@ -1,8 +1,14 @@
+           Changes in BB version 2008.8-1
+  
+  o fixed bug in sane and spg (previously fixed in dfsane) when tol is already 
+     ok initially and while loop is skipped, so flag in result is not set. Also
+     added a warning message when this happens.
+
+
            Changes in BB version 2008.7-1
   
-  o fixed bug in dfsame when tol is already ok initially and while loop is
+  o fixed bug in dfsane when tol is already ok initially and while loop is
     skipped, so flag in result is not set.
-
 
            Changes in BB version 2008.5-1
   
